cmake_minimum_required(VERSION 3.12)
project(code)

set(CMAKE_CXX_STANDARD 11)

add_executable(main main.cpp)
add_executable(helan_flag helan_flag.cpp)
add_executable(heapSort heapSort.cpp)
add_executable(niuke NiuKe.cpp)
add_executable(LinkList LinkList.cpp)
add_executable(BinaryTree BinaryTree.cpp)
add_executable(test test.cpp)
add_executable(recursion recursion.cpp)